--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -64,3 +64,11 @@ body::-webkit-scrollbar-thumb:hover {
   font-display: optional;
   src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff) format('woff')
 }
+
+.hidden {
+  display: none;
+}
+
+.black {
+  background: #141414f6;
+}
