--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -32,3 +32,32 @@
   box-shadow: 0px 4px 9px -1px rgba(0,0,0,0.56);
 }
 
+.loading-core {
+  background: #141414;
+  background: linear-gradient(125deg, #141414, #1d1d1d,  #141414);
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  transition: 200ms ease-in-out;
+  background-size: 300% 300%;
+  animation: load-img 1.5s linear infinite;
+  position: absolute;
+}
+
+@keyframes load-img {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 100%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.hidden-img {
+  opacity: 0;
+}
